macros/tests/ui/entry_bad_param.stderr
error: `#[entry]` function must have signature `[unsafe] fn([<ident> : CriticalSection]) -> !`
 --> tests/ui/entry_bad_param.rs:6:1
  |
6 | fn main(i: u32) -> ! {
  | ^^^^^^^^^^^^^^^^^^^^
